ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: task.bccdevops.site  # Replace with your domain or use a dummy for testing
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: taskmaster-ssvc
              port:
                number: 80
